[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/material_modifier/MaterialWorker.gd" type="Script" id=1]
[ext_resource path="res://addons/material_modifier/Inspector/Roughness.gd" type="Script" id=2]
[ext_resource path="res://addons/material_modifier/CustomIcon.gd" type="Script" id=3]
[ext_resource path="res://addons/material_modifier/FileLoader.gd" type="Script" id=4]
[ext_resource path="res://addons/material_modifier/Inspector/Metallic.gd" type="Script" id=5]
[ext_resource path="res://addons/material_modifier/Inspector/ExpandArea.gd" type="Script" id=6]
[ext_resource path="res://addons/material_modifier/Inspector/Albedo.gd" type="Script" id=7]
[ext_resource path="res://addons/material_modifier/Inspector/Dropdown_BG.tres" type="StyleBox" id=8]

[sub_resource type="Image" id=8]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=7]
flags = 4
flags = 4
image = SubResource( 8 )
size = Vector2( 16, 16 )

[sub_resource type="ImageTexture" id=3]

[sub_resource type="ImageTexture" id=4]

[sub_resource type="ImageTexture" id=5]

[node name="Material Modifier" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -752.0
margin_bottom = -88.0
rect_min_size = Vector2( 250, 150 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
MaterialPathArea = NodePath("VBoxContainer/Material Path Area")
textEditPath = NodePath("VBoxContainer/VSplitContainer/TextEdit")

[node name="FileDialog Mat" type="FileDialog" parent="."]
margin_right = 562.0
margin_bottom = 412.0
popup_exclusive = true
resizable = true
mode = 1
filters = PoolStringArray( "*.material", "*.tres" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Material Path Area" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 272.0
margin_bottom = 24.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
fileDialogPath = NodePath("../../FileDialog Mat")
MatModifier = NodePath("../..")

[node name="Label" type="Label" parent="VBoxContainer/Material Path Area"]
visible = false
margin_top = 5.0
margin_right = 52.0
margin_bottom = 19.0
text = "Material"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadPath" type="LineEdit" parent="VBoxContainer/Material Path Area"]
margin_right = 240.0
margin_bottom = 24.0
focus_mode = 0
size_flags_horizontal = 3
editable = false
selecting_enabled = false
placeholder_text = "Select materials ..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenButton" type="Button" parent="VBoxContainer/Material Path Area"]
margin_left = 244.0
margin_right = 272.0
margin_bottom = 24.0
icon = SubResource( 7 )
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
customIcon = "Folder"

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 272.0
margin_bottom = 488.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 70

[node name="InspectorBG" type="Panel" parent="VBoxContainer/VSplitContainer"]
margin_right = 272.0
margin_bottom = 294.0
rect_min_size = Vector2( 0, 30 )
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/VSplitContainer/InspectorBG"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 7
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaterialProperties" type="MarginContainer" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer"]
margin_right = 272.0
margin_bottom = 294.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties"]
margin_left = 4.0
margin_top = 4.0
margin_right = 268.0
margin_bottom = 290.0
custom_constants/separation = 0

[node name="Albedo Collapse" type="Button" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer"]
margin_right = 264.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
pressed = true
action_mode = 0
text = "Albedo"
icon = SubResource( 7 )
flat = true
align = 0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
ExpandAreaPath = NodePath("../Albedo Panel")

[node name="Albedo_BG" type="Panel" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Albedo Collapse"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Albedo Panel" type="PanelContainer" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer"]
margin_top = 22.0
margin_right = 264.0
margin_bottom = 60.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Albedo Category" type="VBoxContainer" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Albedo Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 257.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Albedo Value" type="HBoxContainer" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Albedo Panel/Albedo Category"]
margin_right = 250.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Albedo_CheckBox" type="CheckBox" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Albedo Panel/Albedo Category/Albedo Value"]
margin_right = 107.0
margin_bottom = 24.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
text = "Albedo"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Albedo Panel/Albedo Category/Albedo Value"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 166.0
margin_right = 170.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color_Reset" type="Button" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Albedo Panel/Albedo Category/Albedo Value"]
margin_left = 111.0
margin_right = 139.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 0 )
focus_mode = 0
icon = SubResource( 7 )
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
customIcon = "Reload"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Albedo Panel/Albedo Category/Albedo Value"]
margin_left = 143.0
margin_right = 250.0
margin_bottom = 24.0
focus_mode = 0
size_flags_horizontal = 3
text = "Color"
color = Color( 1, 1, 1, 1 )

[node name="Metallic Collapse" type="Button" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer"]
margin_top = 60.0
margin_right = 264.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 22 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
pressed = true
action_mode = 0
text = "Metallic"
icon = SubResource( 7 )
flat = true
align = 0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
ExpandAreaPath = NodePath("../Metallic Panel")

[node name="Albedo_BG" type="Panel" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Collapse"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Metallic Panel" type="PanelContainer" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer"]
margin_top = 82.0
margin_right = 264.0
margin_bottom = 148.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Metallic Category" type="VBoxContainer" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 257.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Metallic Value" type="HBoxContainer" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category"]
margin_right = 250.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Metallic" type="CheckBox" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Metallic Value"]
margin_right = 90.0
margin_bottom = 24.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
text = "Metallic"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Metallic Value"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 94.0
margin_right = 98.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Metallic_Slider" type="HSlider" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Metallic Value"]
margin_left = 102.0
margin_top = 4.0
margin_right = 156.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Metallic_Reset" type="Button" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Metallic Value"]
margin_left = 160.0
margin_right = 188.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 0 )
focus_mode = 0
icon = SubResource( 7 )
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
customIcon = "Reload"

[node name="Metallic_SpinBox" type="SpinBox" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Metallic Value"]
margin_left = 192.0
margin_right = 250.0
margin_bottom = 24.0
custom_icons/updown = SubResource( 3 )
max_value = 1.0
step = 0.01

[node name="Specular Value" type="HBoxContainer" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category"]
margin_top = 28.0
margin_right = 250.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Specular" type="CheckBox" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Specular Value"]
margin_right = 90.0
margin_bottom = 24.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
text = "Specular"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Specular Value"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 94.0
margin_right = 98.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Specular_Slider" type="HSlider" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Specular Value"]
margin_left = 102.0
margin_top = 4.0
margin_right = 156.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Specular_Reset" type="Button" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Specular Value"]
margin_left = 160.0
margin_right = 188.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 0 )
icon = SubResource( 7 )
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
customIcon = "Reload"

[node name="Specular_SpinBox" type="SpinBox" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Specular Value"]
margin_left = 192.0
margin_right = 250.0
margin_bottom = 24.0
custom_icons/updown = SubResource( 4 )
max_value = 1.0
step = 0.01
value = 0.5

[node name="Roughness Collapse" type="Button" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer"]
margin_top = 148.0
margin_right = 264.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 22 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
pressed = true
action_mode = 0
text = "Roughness"
icon = SubResource( 7 )
flat = true
align = 0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
ExpandAreaPath = NodePath("../Roughness Panel")

[node name="Albedo_BG" type="Panel" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Collapse"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roughness Panel" type="PanelContainer" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer"]
margin_top = 170.0
margin_right = 264.0
margin_bottom = 208.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roughness Category" type="VBoxContainer" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 257.0
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roughness Value" type="HBoxContainer" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Panel/Roughness Category"]
margin_right = 250.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roughness_CheckBox" type="CheckBox" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Panel/Roughness Category/Roughness Value"]
margin_right = 97.0
margin_bottom = 24.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 3
text = "Roughness"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Panel/Roughness Category/Roughness Value"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 101.0
margin_right = 105.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roughness_Slider" type="HSlider" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Panel/Roughness Category/Roughness Value"]
margin_left = 109.0
margin_top = 4.0
margin_right = 156.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roughness_Reset" type="Button" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Panel/Roughness Category/Roughness Value"]
margin_left = 160.0
margin_right = 188.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 0 )
icon = SubResource( 7 )
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
customIcon = "Reload"

[node name="Roughness_SpinBox" type="SpinBox" parent="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Panel/Roughness Category/Roughness Value"]
margin_left = 192.0
margin_right = 250.0
margin_bottom = 24.0
custom_icons/updown = SubResource( 5 )
max_value = 1.0
step = 0.01
value = 1.0

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/VSplitContainer"]
margin_top = 306.0
margin_right = 272.0
margin_bottom = 460.0
rect_min_size = Vector2( 0, 30 )
hint_tooltip = "Examples:
\"roughness=0\" (float)
\"albedo_color=478cc0\" (color)
\"albedo_texture=res://icon.png\" (Texture)
\"emission_enabled=true\" (bool)
\"uv1_offset=1, 1, 1\" (Vector3)
"
size_flags_vertical = 15
show_line_numbers = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Modify" type="Button" parent="VBoxContainer"]
margin_left = 77.0
margin_top = 492.0
margin_right = 195.0
margin_bottom = 512.0
size_flags_horizontal = 4
text = "Modify Materials"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="files_selected" from="FileDialog Mat" to="VBoxContainer/Material Path Area" method="_on_FileDialog_Mat_files_selected"]
[connection signal="text_changed" from="VBoxContainer/Material Path Area/LoadPath" to="VBoxContainer/Material Path Area" method="_on_LoadPath_text_changed"]
[connection signal="pressed" from="VBoxContainer/Material Path Area/OpenButton" to="VBoxContainer/Material Path Area" method="_on_OpenButton_pressed"]
[connection signal="toggled" from="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Albedo Panel/Albedo Category/Albedo Value/Albedo_CheckBox" to="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Albedo Panel" method="_on_Albedo_CheckBox_toggled"]
[connection signal="pressed" from="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Albedo Panel/Albedo Category/Albedo Value/Color_Reset" to="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Albedo Panel" method="_on_Color_Reset_pressed"]
[connection signal="color_changed" from="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Albedo Panel/Albedo Category/Albedo Value/ColorPickerButton" to="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Albedo Panel" method="_on_ColorPickerButton_color_changed"]
[connection signal="toggled" from="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Metallic Value/Metallic" to="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel" method="_on_Metallic_toggled"]
[connection signal="value_changed" from="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Metallic Value/Metallic_Slider" to="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel" method="_on_Metallic_Slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Metallic Value/Metallic_Reset" to="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel" method="_on_Metallic_Reset_pressed"]
[connection signal="value_changed" from="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Metallic Value/Metallic_SpinBox" to="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel" method="_on_Metallic_SpinBox_value_changed"]
[connection signal="toggled" from="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Specular Value/Specular" to="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel" method="_on_Specular_toggled"]
[connection signal="value_changed" from="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Specular Value/Specular_Slider" to="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel" method="_on_Specular_Slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Specular Value/Specular_Reset" to="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel" method="_on_Specular_Reset_pressed"]
[connection signal="value_changed" from="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel/Metallic Category/Specular Value/Specular_SpinBox" to="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Metallic Panel" method="_on_Specular_SpinBox_value_changed"]
[connection signal="toggled" from="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Panel/Roughness Category/Roughness Value/Roughness_CheckBox" to="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Panel" method="_on_Roughness_CheckBox_toggled"]
[connection signal="value_changed" from="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Panel/Roughness Category/Roughness Value/Roughness_Slider" to="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Panel" method="_on_Roughness_Slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Panel/Roughness Category/Roughness Value/Roughness_Reset" to="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Panel" method="_on_Roughness_Reset_pressed"]
[connection signal="value_changed" from="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Panel/Roughness Category/Roughness Value/Roughness_SpinBox" to="VBoxContainer/VSplitContainer/InspectorBG/ScrollContainer/MaterialProperties/VBoxContainer/Roughness Panel" method="_on_Roughness_SpinBox_value_changed"]
[connection signal="pressed" from="VBoxContainer/Modify" to="." method="_on_Modify_pressed"]
